# vlm

./: .gitignore  README.md  main.py  notes.md  pyproject.toml
inference_results/: retrieval_val2017_500_metrics.json  val2017_500_metrics.json
vlm_train/: __init__.py  arch_manim.py  basic_inf.py  batch_inf.py  eval_captions.py  lm_train.py  qformer_train.py  render_vlm_outputs.py  retrieval_eval.py  vit_blk.py
vlm_train/datasets/: __init__.py  coco_subset_dataset.py  lm_dataloader.py
vlm_train/nn_arch/: __init__.py  lm_to_vlm.py  qformer.py
